03-allow-monitoring.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-monitoring
  namespace: roboshop   # now roboshop namespace will allow, allow-monitoring namespace on port numner 9090
spec:
  podSelector: {}  # for every pods we use {}
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          project: monitoring
    ports:
    - protocol: TCP
      port: 9090 # Prometheus port number for monitoring
